TEST_PROGRAMS/VALID/08/testLessThan.go
package main;
func main(){
    y := 5;
    x := y < 5;
}
