TEST_PROGRAMS/INVALID/09/unknown_escape.go
package escape

func main() {
    a = "a;slkdf a\i"
}
